# lotos-screensaver2

./: .clang-format  README.md  meson.build  postinstall.sh
config/: config.json
config/systemd/: lotos-idle.service  lotos-screensaver.service  lotos-watch.service
debian/: lotos-idle.path  lotos-idle.service  lotos-screensaver.service  postinst.in  start-idle.sh  start-watch.service
screensaver/: blank.hpp  button_layer.hpp  main.cpp  media_layer.hpp  render.hpp  saver.hpp
screensaver/common/: parameters.hpp
screensaver/idle/: idle.cpp  idle_daemon.cpp  idle_daemon.hpp
screensaver/screensaver/: button.hpp  button_renderer.hpp  configuration.hpp  positioner.hpp  renderer.hpp  saver_manager.hpp  screensaver.cpp  screensaver.hpp
